ensured scrollbar is right color

--- a/css/header.css
+++ b/css/header.css
@@ -58,9 +58,9 @@ body {
   transform-origin: bottom left;
 }
 
-.highlight {
+/* .highlight {
   background: linear-gradient(to top, #adba97 50%, transparent 50%);
-}
+} */
 
 /* FOR SMALLER SCREENS */
 
