--- a/css/overview.css
+++ b/css/overview.css
@@ -8,16 +8,16 @@ img {
     max-width: 100%;
 }
 
-#scrollBar {
+#progressBar {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 6px;
-    background-color: #fab617;
+    background-color: #fab617 !important;
 }
 
-#scrollBar::after {
+#progressBar::after {
     content: '';
     display: block;
     height: 100%;
